--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,31 @@ profile.cov
 go.work
 go.work.sum
 
-# env file
+# Build artifacts and temporary files
+tmp/
+build/
+dist/
+*.log
+
+# Environment files
 .env
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs/
+*.log
