👷 chore: define separate env for redis port

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ S3_BASE_URL=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 REDIS_HOST=
+REDIS_PORT=
 REDIS_PASSWORD=
 JWT_SECRET=
 AUTH_SENDER_EMAIL=
