--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: duckparty-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: sh -c 'if [ -n "$$REDIS_PASSWORD" ]; then redis-server --requirepass "$$REDIS_PASSWORD"; else redis-server; fi'
     volumes:
       - redis_data:/data
     healthcheck:
@@ -41,6 +41,9 @@ services:
       - "${APP_PORT}:4030"
     env_file:
       - .env
+    environment:
+      DB_HOST: postgres
+      REDIS_HOST: redis
     depends_on:
       postgres:
         condition: service_healthy
